{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 129,
  "lineage": "1ee7de2e-e463-a4d2-46e0-e9e5df7af2f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:security-group/sg-094a29a792880547c",
            "description": "Database security group",
            "egress": [],
            "id": "sg-094a29a792880547c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "my-db-sg",
            "name_prefix": "",
            "owner_id": "436888476506",
            "revoke_rules_on_delete": false,
            "tags": {
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "tags_all": {
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "timeouts": null,
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:network-acl/acl-0db0f08b81336151b",
            "default_network_acl_id": "acl-0db0f08b81336151b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0db0f08b81336151b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "436888476506",
            "subnet_ids": [
              "subnet-0045d60e45f80e101",
              "subnet-0084b6329fcb4f3d0",
              "subnet-00d9a13ef8038b89e",
              "subnet-02e8204f1b2870b01",
              "subnet-04caff468eabf7f03",
              "subnet-0650c86e83363e9bf",
              "subnet-088073966f7a31460",
              "subnet-0c4e58b8070aabd51",
              "subnet-0c6dff67846011a4b"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:route-table/rtb-0fb7435a5603bd563",
            "default_route_table_id": "rtb-0fb7435a5603bd563",
            "id": "rtb-0fb7435a5603bd563",
            "owner_id": "436888476506",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:security-group/sg-00ca56f2f8ec1d550",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00ca56f2f8ec1d550",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "436888476506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-default",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069ff7401a0671ebb",
            "association_id": "eipassoc-086665dea4db0a205",
            "domain": "vpc",
            "id": "eipalloc-069ff7401a0671ebb",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-04d26c5491405bb4f",
            "private_dns": "ip-10-0-101-149.eu-central-1.compute.internal",
            "private_ip": "10.0.101.149",
            "public_dns": "ec2-18-153-179-2.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.153.179.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f225ebc13d70f9f",
            "association_id": "eipassoc-0c7d76e9b114e504e",
            "domain": "vpc",
            "id": "eipalloc-09f225ebc13d70f9f",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0ca526ded0f3138b5",
            "private_dns": "ip-10-0-102-17.eu-central-1.compute.internal",
            "private_ip": "10.0.102.17",
            "public_dns": "ec2-3-73-192-191.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.73.192.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b84e71403f127b7e",
            "association_id": "eipassoc-009e742b3d9c40fe0",
            "domain": "vpc",
            "id": "eipalloc-0b84e71403f127b7e",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-035e4409fe5e31ceb",
            "private_dns": "ip-10-0-103-84.eu-central-1.compute.internal",
            "private_ip": "10.0.103.84",
            "public_dns": "ec2-18-157-92-97.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.92.97",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:internet-gateway/igw-04a5b62003083aa6b",
            "id": "igw-04a5b62003083aa6b",
            "owner_id": "436888476506",
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069ff7401a0671ebb",
            "association_id": "eipassoc-086665dea4db0a205",
            "connectivity_type": "public",
            "id": "nat-0bc04f07cb06365e3",
            "network_interface_id": "eni-04d26c5491405bb4f",
            "private_ip": "10.0.101.149",
            "public_ip": "18.153.179.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c6dff67846011a4b",
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f225ebc13d70f9f",
            "association_id": "eipassoc-0c7d76e9b114e504e",
            "connectivity_type": "public",
            "id": "nat-065ade8ec2b4c5c86",
            "network_interface_id": "eni-0ca526ded0f3138b5",
            "private_ip": "10.0.102.17",
            "public_ip": "3.73.192.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0650c86e83363e9bf",
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b84e71403f127b7e",
            "association_id": "eipassoc-009e742b3d9c40fe0",
            "connectivity_type": "public",
            "id": "nat-08bdecf1d246be9f6",
            "network_interface_id": "eni-035e4409fe5e31ceb",
            "private_ip": "10.0.103.84",
            "public_ip": "18.157.92.97",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-088073966f7a31460",
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-006f685bdc282103e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bc04f07cb06365e3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-006f685bdc282103e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-067af74f8462bada51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-065ade8ec2b4c5c86",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-067af74f8462bada5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-005c0f77bc38176291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08bdecf1d246be9f6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005c0f77bc3817629",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04a5b62003083aa6b",
            "id": "r-rtb-0c13e57397466d7cd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c13e57397466d7cd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:route-table/rtb-04bae97eb54370b83",
            "id": "rtb-04bae97eb54370b83",
            "owner_id": "436888476506",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-intra",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-intra",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "timeouts": null,
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:route-table/rtb-006f685bdc282103e",
            "id": "rtb-006f685bdc282103e",
            "owner_id": "436888476506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc04f07cb06365e3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-private-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-private-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "timeouts": null,
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:route-table/rtb-067af74f8462bada5",
            "id": "rtb-067af74f8462bada5",
            "owner_id": "436888476506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-065ade8ec2b4c5c86",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-private-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-private-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "timeouts": null,
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:route-table/rtb-005c0f77bc3817629",
            "id": "rtb-005c0f77bc3817629",
            "owner_id": "436888476506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08bdecf1d246be9f6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-private-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-private-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "timeouts": null,
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:route-table/rtb-0c13e57397466d7cd",
            "id": "rtb-0c13e57397466d7cd",
            "owner_id": "436888476506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a5b62003083aa6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-public",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-public",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "timeouts": null,
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7d995c385591a8e",
            "route_table_id": "rtb-04bae97eb54370b83",
            "subnet_id": "subnet-02e8204f1b2870b01"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a743c7b437ab373",
            "route_table_id": "rtb-04bae97eb54370b83",
            "subnet_id": "subnet-0084b6329fcb4f3d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02115ec86662e0b12",
            "route_table_id": "rtb-04bae97eb54370b83",
            "subnet_id": "subnet-00d9a13ef8038b89e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0394eaaa4b12e5ac6",
            "route_table_id": "rtb-006f685bdc282103e",
            "subnet_id": "subnet-0c4e58b8070aabd51"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcf7d75950213c10",
            "route_table_id": "rtb-067af74f8462bada5",
            "subnet_id": "subnet-04caff468eabf7f03"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ca21ee5d0928f28",
            "route_table_id": "rtb-005c0f77bc3817629",
            "subnet_id": "subnet-0045d60e45f80e101"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c298f21677b444a",
            "route_table_id": "rtb-0c13e57397466d7cd",
            "subnet_id": "subnet-0c6dff67846011a4b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fe5f3eaf3615426",
            "route_table_id": "rtb-0c13e57397466d7cd",
            "subnet_id": "subnet-0650c86e83363e9bf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06208afbac54f9a76",
            "route_table_id": "rtb-0c13e57397466d7cd",
            "subnet_id": "subnet-088073966f7a31460"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-02e8204f1b2870b01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e8204f1b2870b01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-intra-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-intra-eu-central-1a",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-0084b6329fcb4f3d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0084b6329fcb4f3d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-intra-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-intra-eu-central-1b",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-00d9a13ef8038b89e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.53.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d9a13ef8038b89e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-intra-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc-intra-eu-central-1c",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-0c4e58b8070aabd51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4e58b8070aabd51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-04caff468eabf7f03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04caff468eabf7f03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-0045d60e45f80e101",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0045d60e45f80e101",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-0c6dff67846011a4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6dff67846011a4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-0650c86e83363e9bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0650c86e83363e9bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:subnet/subnet-088073966f7a31460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088073966f7a31460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "436888476506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnets",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "thesis-cost-general": "fargate",
              "thesis-cost-traffic": "fargate"
            },
            "vpc_id": "vpc-093bd7971802dc5d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:436888476506:vpc/vpc-093bd7971802dc5d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db0f08b81336151b",
            "default_route_table_id": "rtb-0fb7435a5603bd563",
            "default_security_group_id": "sg-00ca56f2f8ec1d550",
            "dhcp_options_id": "dopt-0e9ce2aa924f30e88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093bd7971802dc5d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb7435a5603bd563",
            "owner_id": "436888476506",
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-fargate-vpc",
              "Terraform": "true",
              "thesis-cost-general": "fargate"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}